--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
       }
       #map {
         position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
+        top: 0px;
+        right: 0px;
+        width: 50%;
+        height: 100%;
+      }
+      #layerlist {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 50%;
+        height: 100%;
+        overflow: auto;
       }
     </style>
   </head>
   <body>
     <div id="map"></div>
+    <div id="layerlist"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
