First success with changing colors in the map

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Redux - LayerStore - MapBox Style JSON</title>
     <link rel="stylesheet" href="https://openlayers.org/en/latest/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="maputnik.css" type="text/css">
     <style>
       html, body {
         margin: 0;
